--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Groupi</string>
+    <string name="email_hint">Type Email Here…</string>
+    <string name="pass_hint">Type Password Here…</string>
+    <string name="nick_hint">Type Nickname Here…</string>
 </resources>
